[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://Miscellaneous/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=2]
radius = 222.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 50 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
current_health = 2
max_health = 3

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CreatureDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CreatureDetectionZone"]
shape = SubResource( 2 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 3 )

[connection signal="body_entered" from="CreatureDetectionZone" to="." method="_on_CreatureDetectionZone_body_entered"]
[connection signal="body_exited" from="CreatureDetectionZone" to="." method="_on_CreatureDetectionZone_body_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
